refactor(addFriend): changed the param to username
